<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/white"
    android:orientation="vertical"
    android:padding="30dp"
    android:weightSum="10" >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:background="@drawable/mlogo" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:text="@string/textsmart"
        android:textColor="@color/blue" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:text="@string/textsecurematernity"
        android:textColor="@color/blue" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:text="@string/textappointrec"
        android:textColor="@color/blue" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:text="@string/main_text"
        android:textColor="@color/blue" />
    <!-- android:text="@string/username_button" -->

    <EditText
        android:id="@+id/userName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_weight="1"
        android:background="@drawable/button_green"
        android:inputType="text"
        android:padding="@dimen/padding_small"
        android:text="admin"
        android:textSize="@dimen/font_size" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/passwordbutton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_weight="1"
        android:background="@drawable/button_green"
        android:inputType="textPassword"
        android:padding="@dimen/padding_small"
        android:text=""
        android:textSize="@dimen/font_size" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:layout_weight="1"
        android:background="@drawable/button_login"
        android:onClick="introClick"
        android:padding="@dimen/padding_small"
        android:text="@string/login_button"
        android:textSize="@dimen/font_size" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:text="@string/textnmhireland"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:background="@color/white"
        android:padding="0dp"
        android:password="false"
        android:singleLine="false"
        android:text="@string/textcredits"
        android:textColor="@color/blue" />

</LinearLayout>