<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary1">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="${relativePackage}.${activityClass}"
    android:orientation="vertical"
    android:background="@color/primary1"
    >
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/header_box_height"
        
        android:padding="@dimen/padding_small"
        
        android:background="@color/primary3"
        android:orientation="horizontal"
        android:weightSum="1"
        >
    
        <Button android:id="@+id/dateBack"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="0.15"
		
            android:gravity="center_vertical"
            android:layout_marginLeft="@dimen/margin_small"
            android:background="@drawable/button_back"
            android:onClick="dateClick"
            android:visibility="invisible"
            />
            
        <TextView
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="0.75"
	        
            android:paddingTop="@dimen/padding_medium"
            android:gravity="center_horizontal"
	
            android:text="@string/satellite_header"
            android:textSize="@dimen/font_size"
            android:textColor="@color/primary5"
            />

        <Button
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="0.1"
	
            android:gravity="center_vertical"
            android:layout_marginRight="@dimen/margin_small"
            android:background="@drawable/ic_action_overflow"
            />
	    
    </LinearLayout>
    
    <!--  Adjust this string by code  -->
    <TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:padding="@dimen/padding_medium"
        android:gravity="center"
        
        android:text="@string/satellite_select"
        android:textSize="@dimen/font_size"
        android:textColor="@color/primary5"
        />
    
    <Button android:id="@+id/week1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginBottom="@dimen/margin_small"
        android:layout_marginLeft="@dimen/margin_medium"
        android:layout_marginRight="@dimen/margin_medium"
        android:background="@drawable/button"
        android:padding="@dimen/padding_tiny"
        
        android:text="@string/greystones"
        android:textSize="@dimen/font_size_small"           
        android:textColor="@color/primary5"
        android:gravity="start"
        android:onClick="dateClick"
        />
    
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginBottom="@dimen/margin_small"
        android:layout_marginLeft="@dimen/margin_medium"
        android:layout_marginRight="@dimen/margin_medium"
        android:background="@drawable/button"
        android:padding="@dimen/padding_tiny"

        android:text="@string/arklow"
        android:textSize="@dimen/font_size_small"           
        android:textColor="@color/primary5"
        android:gravity="start"
        android:onClick="dateClick"
        />
    
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginBottom="@dimen/margin_small"
        android:layout_marginLeft="@dimen/margin_medium"
        android:layout_marginRight="@dimen/margin_medium"
        android:background="@drawable/button"
        android:padding="@dimen/padding_tiny"

        android:text="@string/newtown"
        android:textSize="@dimen/font_size_small"           
        android:textColor="@color/primary5"
        android:gravity="start"
        android:onClick="dateClick"
        />
    
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginBottom="@dimen/margin_small"
        android:layout_marginLeft="@dimen/margin_medium"
        android:layout_marginRight="@dimen/margin_medium"
        android:background="@drawable/button"
        android:padding="@dimen/padding_tiny"

        android:text="@string/bray"
        android:textSize="@dimen/font_size_small"           
        android:textColor="@color/primary5"
        android:gravity="start"
        android:onClick="dateClick"
        />
    
    <Button 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        
       	android:layout_marginRight="@dimen/margin_medium"
       
        android:text="@string/later"
        android:textSize="@dimen/font_size"
        android:textColor="@color/primary4"
        android:gravity="right|center_vertical"

        android:background="@color/primary1"
       	android:drawableRight="@drawable/ic_action_event"
       	android:onClick="dateClick"
       	/>
        
</LinearLayout>
</ScrollView>