<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary1" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary1"
        android:orientation="vertical"
        android:paddingBottom="@dimen/padding_medium"
        tools:context="${relativePackage}.${activityClass}" >

        <!--
    Ideally set up the names of the clinics to be bolded in the code
    It's easy to do in code if the strings are separated out and concatenated when setting the value,
	just tag the title string as bold and then attach the rest on the end
        -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/header_box_height"
            android:background="@color/primary3"
            android:orientation="horizontal"
            android:padding="@dimen/padding_small"
            android:weightSum="1" >

            <Button
                android:id="@+id/clinicsBack"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_small"
                android:layout_weight="0.15"
                android:background="@drawable/button_back"
                android:gravity="center_vertical"
                android:onClick="clinicClick"
                android:visibility="invisible" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.75"
                android:gravity="center_horizontal"
                android:paddingTop="@dimen/padding_medium"
                android:text="@string/view_clinics"
                android:textColor="@color/primary5"
                android:textSize="@dimen/font_size" />

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/margin_small"
                android:layout_weight="0.1"
                android:background="@drawable/ic_action_overflow"
                android:gravity="center_vertical"
                android:onClick="clinicClick" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/padding_medium"
            android:text="@string/select_domino_clinic"
            android:textColor="@color/primary5"
            android:textSize="@dimen/font_size" />

        <Button
            android:id="@+id/nmh"
            android:layout_width="match_parent"
            android:layout_height="@dimen/clinic_button_height"
            android:layout_marginBottom="@dimen/margin_small"
            android:layout_marginLeft="@dimen/margin_medium"
            android:layout_marginRight="@dimen/margin_medium"
            android:background="@drawable/button"
            android:gravity="start"
            android:onClick="clinicClick"
            android:padding="@dimen/padding_small"
            android:text="@string/clinic_NMH_OPD_desc"
            android:textColor="@color/primary5"
            android:textSize="@dimen/font_size" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="@dimen/clinic_button_height"
            android:layout_marginBottom="@dimen/margin_small"
            android:layout_marginLeft="@dimen/margin_medium"
            android:layout_marginRight="@dimen/margin_medium"
            android:layout_marginTop="@dimen/margin_small"
            android:background="@drawable/button"
            android:gravity="start"
            android:onClick="clinicClick"
            android:padding="@dimen/padding_small"
            android:text="@string/clinic_Leopardstown_desc"
            android:textColor="@color/primary5"
            android:textSize="@dimen/font_size" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="@dimen/clinic_button_height"
            android:layout_marginBottom="@dimen/margin_small"
            android:layout_marginLeft="@dimen/margin_medium"
            android:layout_marginRight="@dimen/margin_medium"
            android:layout_marginTop="@dimen/margin_small"
            android:background="@drawable/button"
            android:gravity="start"
            android:onClick="clinicClick"
            android:padding="@dimen/padding_small"
            android:text="@string/clinic_DunLaoghaire"
            android:textColor="@color/primary5"
            android:textSize="@dimen/font_size" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="@dimen/clinic_button_height"
            android:layout_marginBottom="@dimen/margin_small"
            android:layout_marginLeft="@dimen/margin_medium"
            android:layout_marginRight="@dimen/margin_medium"
            android:layout_marginTop="@dimen/margin_small"
            android:background="@drawable/button"
            android:gravity="start"
            android:onClick="clinicClick"
            android:padding="@dimen/padding_small"
            android:text="@string/clinic_Churchtown_desc"
            android:textColor="@color/primary5"
            android:textSize="@dimen/font_size" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="@dimen/clinic_button_height"
            android:layout_marginBottom="@dimen/margin_small"
            android:layout_marginLeft="@dimen/margin_medium"
            android:layout_marginRight="@dimen/margin_medium"
            android:layout_marginTop="@dimen/margin_small"
            android:background="@drawable/button"
            android:gravity="start"
            android:onClick="clinicClick"
            android:padding="@dimen/padding_small"
            android:text="@string/clinic_NMH_desc"
            android:textColor="@color/primary5"
            android:textSize="@dimen/font_size" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="@dimen/clinic_button_height"
            android:layout_marginBottom="@dimen/margin_small"
            android:layout_marginLeft="@dimen/margin_medium"
            android:layout_marginRight="@dimen/margin_medium"
            android:layout_marginTop="@dimen/margin_small"
            android:background="@drawable/button"
            android:gravity="start"
            android:onClick="clinicClick"
            android:padding="@dimen/padding_small"
            android:text="@string/clinic_Home_Visits_desc"
            android:textColor="@color/primary5"
            android:textSize="@dimen/font_size" />
    </LinearLayout>

</ScrollView>